--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.2"
+    "@babel/core": "7.24.4",
+    "@babel/runtime": "7.24.4"
   }
 }
